Fix style of search bar in menus Change default align of long searchable menus Prioritize menu over dialog when using confirm/cancel keys

--- a/css/general.css
+++ b/css/general.css
@@ -660,7 +660,7 @@
 			background-color: transparent;
 		}
 	}
-	.menu_search_bar {
+	.contextMenu .menu_search_bar {
 		padding: 0;
 		display: flex;
 	}
